# nano-game-engine

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODOs.md  game  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: NPC.hpp  character.hpp  constants.hpp  entity.hpp  game.hpp  player.hpp  projectile.hpp  world.hpp
src/: character.cpp  game.cpp  main.cpp  npc.cpp  player.cpp  projectile.cpp  world.cpp
